# swContest_backend

./: README.md  best_fit.py  main.py  note.py  pyproject.toml  rectangle.py  requirements.txt  run_cv.py
